[project]
name = "Quetzal Analytic Tools"
version = "0.0.1"
description = "django tool to visualize demographics for a specific location"
authors = [
    "Elmer Camargo <elmer@tazacafe.us>"
]
license = "MIT license"
requires-python = ">=3.8"

keywords = ["small-business", "quetzal", "census", "demographics"]

classifiers = [
    "Topic :: Software Development"
]

[tool.poetry]
name = "Quetzal Analytic Tools"
version = "0.0.1"
description = "census wrapper to get demographics for a specific location"
authors = [
    "Elmer Camargo <elmer@tazacafe.us>"
]
packages = [
	{ include = "spatial_tools/census_api.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
GDAL = {path = "dependencies/GDAL-3.4.3-cp39-cp39-win_amd64.whl", develop = true}
Fiona = {path = "dependencies/Fiona-1.8.21-cp39-cp39-win_amd64.whl", develop = true}
geopandas = "^0.11.0"
docopt = "^0.6.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125